changed behaviour of H2 in containers from position:relative to position:left. This fixes 'add note' link not being visible. Fixes #646. Thanks Hans!
git-svn-id: http://www.rousette.org.uk/svn/tracks-repos/trunk@713 a4c988fc-2ded-0310-b66e-134b36920a42

--- a/tracks/public/stylesheets/standard.css
+++ b/tracks/public/stylesheets/standard.css
@@ -229,7 +229,7 @@ body.stats #topbar {
       margin-right: -5px;
       margin-bottom: 0px;      
       color: #666;
-      position:relative;
+      position:left;  /* changed from relative to left in order to show 'add note' */
       /* text-shadow: rgba(0,0,0,.4) 0px 2px 5px; */
       }
 
